@@ -18,6 +18,10 @@
             <includes>
                 <include>*:jar:*</include>
             </includes>
+            <excludes>
+                <exclude>*:servlet-api:*</exclude>
+                <exclude>*:jcip-annotations:*</exclude>
+            </excludes>
         </dependencySet>
         <dependencySet>
             <outputDirectory>/lib/endorsed</outputDirectory>
@@ -45,22 +49,6 @@
         <fileSet>
             <directory>doc/</directory>
             <outputDirectory>/doc</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/apidocs</directory>
-            <outputDirectory>/doc/api</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/style</directory>
-            <outputDirectory>/doc/style</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/unitTest</directory>
-            <outputDirectory>/doc/unitTest</outputDirectory>
-        </fileSet>
-        <fileSet>
-            <directory>target/site/xref</directory>
-            <outputDirectory>/doc/src-xref</outputDirectory>
         </fileSet>
     </fileSets>
     
